logs/tracking/build.make.859.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp: In constructor ‘FeatureDetector::FeatureDetector(int)’:
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp:4:8: error: ‘ORB’ has not been declared
  orb = ORB::create(max_features);
        ^
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp: In member function ‘void FeatureDetector::detectFeatures(std::vector<cv::Mat>)’:
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp:9:27: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for (int i=0; i<pyr.size(); i++) {
                           ^
make[2]: *** [CMakeFiles/tracking.dir/src/FeatureDetector.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
